# raycast-better-translate

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
assets/: ocr
ocr/: Cargo.toml
ocr/src/: display.rs  main.rs
src/: helper.ts  import.d.ts  ocr-translate.ts  word-translate.ts
tests/: ocr.scpt
