[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.8.5"
anyhow = "1.0.75"
image = "0.24.7"
wgpu = "0.18.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
futures = "0.3.29"
